removed event library from buckshot repo.  now using pub to retrieve it from github.com/prujohn/DartNet-Event-Model repo.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,3 +6,5 @@ dependencies:
     sdk: unittest
   dartxml:
     git: git://github.com/prujohn/dart-xml.git
+  events:
+    git: git://github.com/prujohn/DartNet-Event-Model.git
