--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,9 +4,9 @@ version: 0.0.1
 dependencies:
   unittest:
     sdk: unittest
-  dart_xml:
+  dart-xml:
     git: git://github.com/prujohn/dart-xml.git
-  dartnet_event_model:
+  DartNet-Event-Model:
     git: git://github.com/prujohn/DartNet-Event-Model.git
   dart_utils:
     git: git://github.com/prujohn/dart_utils.git
