updated to new pub standard.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,9 +4,9 @@ version: 0.0.1
 dependencies:
   unittest:
     sdk: unittest
-  dart-xml:
+  dart_xml:
     git: git://github.com/prujohn/dart-xml.git
-  DartNet-Event-Model:
+  dartnet_event_model:
     git: git://github.com/prujohn/DartNet-Event-Model.git
   dart_utils:
     git: git://github.com/prujohn/dart_utils.git
