--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,8 @@
 name: buckshot
 description: Template-driven UI framework for building modern web applications.
 version: 0.0.1
+author: John Evans <prujohn@gmail.com>
+homepage: http://www.buckshotui.org
 dependencies:
   unittest:
     sdk: unittest
