--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,12 @@
 name: buckshot
 description: Template-driven UI framework for building modern web applications.
-version: 0.0.1
+version: 0.0.1-alpha
 author: John Evans <prujohn@gmail.com>
 homepage: http://www.buckshotui.org
 dependencies:
   unittest:
     sdk: unittest
-  xml:
-    git: git://github.com/prujohn/dart-xml.git
+  xml: 'any'
   dartnet_event_model:
     git: git://github.com/prujohn/DartNet-Event-Model.git
   dart_utils:
