--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,17 @@
 name: buckshot
-description: Template-driven UI framework for building modern web applications.
-version: 0.0.1-alpha
+description: >
+  Buckshot is a UI Framework for modern web applications. It attempts to model 
+  the best of .net WPF (Silverlight) and Adobe Flex, but without the need for a 
+  plug-in. Buckshot renders all output in HTML5/CSS3, and makes use of features 
+  available in today's modern web browsers.  If you've worked with .net WPF or 
+  Silverlight then this framework will feel very familiar to you.
+version: 0.0.2-alpha
 author: John Evans <prujohn@gmail.com>
 homepage: http://www.buckshotui.org
 dependencies:
-  unittest:
-    sdk: unittest
   xml: 'any'
-  dartnet_event_model:
-    git: git://github.com/prujohn/DartNet-Event-Model.git
+  dartnet_event_model: 'any'
   dart_utils:
     git: git://github.com/prujohn/dart_utils.git
+  unittest:
+    sdk: unittest
