--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ version: 0.0.2-alpha
 author: John Evans <prujohn@gmail.com>
 homepage: http://www.buckshotui.org
 dependencies:
-  xml: 'any'
+  xml: 
+    git: git://github.com/prujohn/dart-xml.git
   dartnet_event_model: 'any'
   dart_utils:
     git: git://github.com/prujohn/dart_utils.git
