--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: >
   plug-in. Buckshot renders all output in HTML5/CSS3, and makes use of features 
   available in today's modern web browsers.  If you've worked with .net WPF or 
   Silverlight then this framework will feel very familiar to you.
-version: 0.0.2-alpha
+version: 0.0.2
 author: John Evans <prujohn@gmail.com>
 homepage: http://www.buckshotui.org
 dependencies:
